<resources>
    <string name="app_name">Caravans</string>
    <string name="menu_settings">Settings</string>
    <string name="title_decrypt_single">Decrypt Single File</string>
    <string name="title_new_folder">Add New Encrypted Folder</string>
    <string name="fsize_to_test">File size</string>
    <string name="number_of_tests">Test Count</string>
    <string name="mb">MB</string>
    <string name="text_pattern">Pattern</string>
    <string name="text_pattern_selected">Pattern is SET!</string>
    <string name="switch_to_pass">Switch to Password</string>
    <string name="newEncFolder">Add New Encrypted Folder</string>
    <string name="encryptFile">Encrypt File</string>
    <string name="decryptFile">Decrypt File</string>
    <string name="settings">Settings</string>
    <string name="perf_test">Run Performance Test</string>
    <string name="folder_location">Folder Location</string>
    <string name="browse_folder">Browse</string>
    <string name="text_password">Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="text_algorithm">Algorithm</string>
    <string name="new_folder_btn">New Encrypted Folder</string>
    <string name="show_folders">Encrypted Folders</string>
    <string name="file_to_decrypt">File to Decrypt</string>
    <string name="dest_folder">Destination Folder</string>
    <string name="single_decrypt">Decrypt File</string> 
    <string name="help_desc">Help</string>
    <string name="folders_desc">Encrypted Folders</string>
    <string name="search">Search</string>
    <string name="aes">AES</string>
    <string name="twofish">Two Fish</string>
    <string name="serpent">Serpent</string>
    <string name="auto">Auto</string>
    
    <string-array name="algorithms">
        <item>AES</item>
        <item>Two Fish</item>
        <item>Serpent</item>
    </string-array>
    
	<string-array name="algorithms_with_auto">
	    <item>Auto</item>
        <item>AES</item>
        <item>Two Fish</item>
        <item>Serpent</item>
    </string-array>
    
	<string-array name="file_sizes">
	    <item>KB</item>
	    <item>MB</item>
	</string-array>
</resources>