<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@drawable/main_background">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/file_to_decrypt"
        android:textColor="#dddddd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/file_to_decrypt"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@id/tv1"
        android:layout_below="@id/tv1"
        android:layout_marginTop="7dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:background="@drawable/input_style"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   
	<ImageButton
        android:id="@+id/browse_for_decrypt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="49.5dp"
        android:layout_toRightOf="@id/file_to_decrypt"
        android:contentDescription="@string/search"
        android:onClick="browseFolder"
        android:src="@drawable/search" />
	
	<TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@id/browse_for_decrypt_btn"
        android:layout_marginTop="18dp"
        android:text="@string/dest_folder"
        android:textColor="#dddddd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
        android:id="@+id/decrypt_dest"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@id/tv1"
        android:layout_below="@id/tv2"
        android:layout_marginTop="7dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:background="@drawable/input_style"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	<ImageButton
        android:id="@+id/browse_for_dest_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="135dp"
        android:layout_toRightOf="@id/decrypt_dest"
        android:contentDescription="@string/search"
        android:onClick="browseFolder"
        android:src="@drawable/search" />
	
    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv1"
        android:layout_marginTop="18dp"
        android:text="@string/text_password"
        android:layout_below="@id/decrypt_dest"
        android:textColor="#dddddd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
        android:id="@+id/decrypt_password"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@id/tv1"
        android:layout_below="@id/tv3"
        android:layout_marginTop="7dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:ems="10"
        android:background="@drawable/input_style"
        android:inputType="textPassword" />

			<ImageButton
	            android:id="@+id/browse_pattern"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_marginRight="5dp"
	            android:layout_alignBottom="@id/decrypt_password"
	            android:contentDescription="@string/search"
	            android:onClick="showPattern"
	            android:src="@drawable/pattern" />
			
	<TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv1"
        android:layout_below="@id/decrypt_password"
        android:layout_marginTop="18dp"
        android:text="@string/text_algorithm"
        android:textColor="#dddddd"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<RadioGroup android:id="@+id/radioGroup_algo2"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="7dp"
    	android:layout_below="@id/tv4"
    	android:layout_alignLeft="@+id/tv1"
    	android:orientation="vertical">
    
		<RadioButton android:id="@+id/radio_auto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/auto"
			android:checked="true"
			android:textColor="#dddddd"/>
		
		<RadioButton android:id="@+id/radio_aes2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/aes"
			android:textColor="#dddddd"/>
	</RadioGroup>
	
	<RadioGroup android:id="@+id/radioGroup_algo3"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   	android:layout_marginLeft="25dp"
	   	android:layout_toRightOf="@id/radioGroup_algo2"
	   	android:layout_alignTop="@id/radioGroup_algo2"
    	android:orientation="vertical">
	    
	    <RadioButton android:id="@+id/radio_two_fish2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/twofish"
			android:textColor="#dddddd"/>
	    
		<RadioButton android:id="@+id/radio_serpent2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/serpent"
			android:textColor="#dddddd"/>
	</RadioGroup>
    <Button
        android:id="@+id/single_decrypt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv1"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:text="@string/single_decrypt" />
</RelativeLayout>